přidání textu do galerie

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,23 @@
       </div>
     </section>
 
-    <section id="gallery" class="gallery"></section>
+    <section id="gallery" class="gallery">
+      <div class="gallery__photo"></div>
+      <div class="gallery__intro">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro
+          consectetur dolor suscipit quidem laboriosam nostrum maxime itaque
+          eligendi quis, sint voluptatem odio, aliquam nesciunt accusamus qui,
+          aspernatur accusantium? Odit, culpa! Deserunt praesentium sint dolore,
+          optio sapiente assumenda magni ullam ipsam eveniet itaque magnam ea
+          perspiciatis velit qui neque? Enim, iure? Laudantium suscipit dolores
+          cupiditate voluptates nam aliquam asperiores quasi illum repellendus,
+          tempora sequi eos iure facilis distinctio veritatis quos nobis qui sit
+          minima unde aliquid officiis laborum accusamus? Praesentium,
+          molestias!
+        </p>
+      </div>
+    </section>
 
     <section id="kontakt">
       <div class="container">
