při kliknutí skrývat menu

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <div id="domu" class="site-logo"></div>
           <div class="navigation">
             <button id="nav-btn" class="nav-btn"></button>
-            <nav class="nav-closed">
+            <nav class="nav-open nav-closed">
               <a href="#domu">domů</a>
               <a href="#menu">menu</a>
               <a href="#gallery">galerie</a>
