--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
               </div>
               <div class="drink__info">
                 <h3>Cappuccino</h3>
-                <div class="layer">
+                <!-- <div class="layer">
                   <div
                     class="layer__color"
                     style="background-color: #feeeca"
@@ -71,6 +71,7 @@
                   ></div>
                   <div class="layer__label">espresso</div>
                 </div>
+                -->
               </div>
             </div>
             <div class="drink__controls">
