--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
         <p class="menu-intro">
           Vyberte si z našeho interaktivního menu a nemusíte čekat na obsluhu
         </p>
-<!-- 
+
         <div class="drinks-list">
-         
+         <!-- 
            <div class="drink">
             <div class="drink__product">
               <div class="drink__cup">
@@ -80,8 +80,8 @@
             <div class="drink__controls">
               <button class="order-btn">Objednat</button>
             </div>
-          
-          </div>  -->
+           -->
+          </div> 
         </div>
       </div>
     </section>
